<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ui.people.StudentActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="200dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/text_stud_neptun"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/student_neptun" />

        <EditText
            android:id="@+id/text_input_stud_neptun"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/student_neptun" />

        <Space
            android:layout_width="80dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/text_input_stud_name"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/student_name" />


        <TextView
            android:id="@+id/text_stud_name"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/student_name" />


        <Space
            android:layout_width="200dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="400dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/text_stud_sex"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/student_sex" />

        <EditText
            android:id="@+id/text_input_stud_sex"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/student_sex" />

        <Space
            android:layout_width="80dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/text_input_stud_faculty"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/student_faculty" />

        <TextView
            android:id="@+id/text_stud_faculty"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/student_faculty" />
        <Space
            android:layout_width="400dp"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Space
            android:layout_width="540dp"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/stud_trust_switch"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:theme="@style/SCBSwitch"
            android:text="@string/student_trust" />
        <Space
            android:layout_width="540dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/event_student_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>